# Hotels-Project-Done

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: database.py  main.py
src/models/: booking.py  room.py
src/routers/: booking_routes.py  room_routes.py
src/schemas/: booking.py  room.py
src/services/: booking_service.py  room_service.py
tests/: conftest.py  test_booking_service.py  test_room_service.py
